add some get routes
